fixing overlaping events

--- a/src/sass/time-column.scss
+++ b/src/sass/time-column.scss
@@ -37,8 +37,10 @@
     left: 0;
     position: absolute;
     right: 0;
-    margin-right: 10px;
     top: 0;
+    overflow: hidden;
+    border-right-color: rgba(0, 0, 0, 0.11);
+    border-right-width: 1px;
 
     &.rbc-rtl {
       left: 10px;
