--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -25,7 +25,7 @@ $btn-color: #373a3c !default;
 $btn-bg: #fff !default;
 $btn-border: #ccc !default;
 
-$current-time-color: #74ad31 !default;
+$current-time-color: #8675CB !default;
 
 $rbc-css-prefix: rbc-i !default;
 
